# mituke

./: .env.example  ARCHITECTURE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
src/: main.py
src/mituke/: __init__.py  app.py  config.py
src/mituke/bot/: __init__.py  commands.py  events.py  factory.py  messages.py  voice.py
src/mituke/patches/: __init__.py  voice_recv.py
src/mituke/transcription/: __init__.py  audio.py  messages.py  model.py  pending_audio.py  recognizer.py  sink.py  state.py  text.py
tests/: test_app.py  test_bot_commands.py  test_bot_events.py  test_bot_factory.py  test_config.py  test_patches.py  test_patches_voice_recv.py  test_transcription_helpers.py  test_transcription_messages.py  test_transcription_pending_audio.py  test_transcription_sink.py
